[metadata]
name = textual-picofont
version = attr: textual_picofont.__version__
author = TomJGooding
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/textual-picofont
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
install_requires =
    textual >= 0.86.0

[options.packages.find]
where = src

[options.package_data]
textual_picofont = py.typed

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-asyncio
    pytest-cov
    textual-dev
